ESLint e Prettier configs

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
   </head>
   <body>
     <noscript>
-      Você precisa ter o javascript habilitado em seu navegador para acessar esse site.
-      You need to enable JavaScript to run this app.
+      Ops!<br>
+      You need to enable JavaScript to run this app.<br>
+      Você precisa ter o javascript habilitado em seu navegador para acessar esse site.<br>
+      Debe tener javascript habilitado en su navegador para acceder a este sitio.<br>
     </noscript>
     <div id="root"></div>
   </body>
