--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>Leste Contact</title>
+    <title>List Contacts</title>
   </head>
   <body>
     <noscript>
