--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#149675" />
     <meta
       name="description"
-      content="Listagem de contatos - Leste Contact"
+      content="Listagem de contatos"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
